// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search render correcto de search input (en-US) 1`] = `
<form
  method="get"
  onSubmit={[Function]}
>
  <div
    className="MuiPaper-root MuiPaper-elevation1 makeStyles-root-1 MuiPaper-rounded"
  >
    <div
      className="MuiInputBase-root makeStyles-input-2"
      onClick={[Function]}
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInputBase-input"
        defaultValue={undefined}
        disabled={undefined}
        id={undefined}
        name={undefined}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder="Search the Universe"
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <button
      className="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-3"
      disabled={false}
      onBlur={[Function]}
      onClick={undefined}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="submit"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root"
          color={undefined}
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          />
        </svg>
      </span>
    </button>
  </div>
</form>
`;

exports[`Search render correcto de search input (es-MX) 1`] = `
<form
  method="get"
  onSubmit={[Function]}
>
  <div
    className="MuiPaper-root MuiPaper-elevation1 makeStyles-root-1 MuiPaper-rounded"
  >
    <div
      className="MuiInputBase-root makeStyles-input-2"
      onClick={[Function]}
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInputBase-input"
        defaultValue={undefined}
        disabled={undefined}
        id={undefined}
        name={undefined}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder="Search the Universe"
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <button
      className="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-3"
      disabled={false}
      onBlur={[Function]}
      onClick={undefined}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="submit"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root"
          color={undefined}
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</form>
`;
